--- a/doc/source/locale/ja/LC_MESSAGES/getting_started.po
+++ b/doc/source/locale/ja/LC_MESSAGES/getting_started.po
@@ -1,11 +1,11 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2018, MDR Inc.
-# This file is distributed under the same license as the Blueqat package.
+# This file is distributed under the same license as the Qing package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Blueqat \n"
+"Project-Id-Version: Qing \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-20 00:23+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -99,12 +99,12 @@ msgid "Ising Model"
 msgstr ""
 
 #: ../../source/getting_started.rst:147
-msgid "Blueqat to Qiskit"
-msgstr "BlueqatからQiskit"
+msgid "Qing to Qiskit"
+msgstr "QingからQiskit"
 
 #: ../../source/getting_started.rst:156
-msgid "Blueqat to QASM"
-msgstr "BlueqatからQASM"
+msgid "Qing to QASM"
+msgstr "QingからQASM"
 
 #: ../../source/getting_started.rst:169
 msgid "Example"
