--- a/doc/source/locale/ja/LC_MESSAGES/github.po
+++ b/doc/source/locale/ja/LC_MESSAGES/github.po
@@ -1,11 +1,11 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2018, MDR Inc.
-# This file is distributed under the same license as the Blueqat package.
+# This file is distributed under the same license as the Qing package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Blueqat \n"
+"Project-Id-Version: Qing \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-20 00:23+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -21,13 +21,13 @@ msgid "GitHub"
 msgstr ""
 
 #: ../../source/github.rst:4
-msgid "Blueqat's GitHub repository is here:"
-msgstr "BlueqatのGitHubリポジトリはこちらです。"
+msgid "Qing's GitHub repository is here:"
+msgstr "QingのGitHubリポジトリはこちらです。"
 
 #: ../../source/github.rst:6
-msgid "https://github.com/Blueqat/Blueqat"
+msgid "https://github.com/Qing/Qing"
 msgstr ""
 
-#~ msgid "https://github.com/mdrft/Blueqat"
+#~ msgid "https://github.com/mdrft/Qing"
 #~ msgstr ""
 
