--- a/doc/source/locale/ja/LC_MESSAGES/github.po
+++ b/doc/source/locale/ja/LC_MESSAGES/github.po
@@ -1,11 +1,11 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2018, MDR Inc.
-# This file is distributed under the same license as the Queen package.
+# This file is distributed under the same license as the Qing package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Queen \n"
+"Project-Id-Version: Qing \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-20 00:23+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -21,13 +21,13 @@ msgid "GitHub"
 msgstr ""
 
 #: ../../source/github.rst:4
-msgid "Queen's GitHub repository is here:"
-msgstr "QueenのGitHubリポジトリはこちらです。"
+msgid "Qing's GitHub repository is here:"
+msgstr "QingのGitHubリポジトリはこちらです。"
 
 #: ../../source/github.rst:6
-msgid "https://github.com/Queen/Queen"
+msgid "https://github.com/Qing/Qing"
 msgstr ""
 
-#~ msgid "https://github.com/mdrft/Queen"
+#~ msgid "https://github.com/mdrft/Qing"
 #~ msgstr ""
 
